[package]
name = "cts-rs"
authors = ["Tyler Ebel <tebel@tylerebel.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_matches = "1.5.0"
mockall = "0.11.4"
tracing = "0.1.37"
colored = "2.0"


aws-config = { version = "1.2.0", features = ["behavior-version-latest"] } # Use the latest version
aws-sdk-controltower = "1.21.0" # Use the latest version
tokio = { version = "1", features = ["full"] }