[package]
name = "cts-rs"
authors = ["Tyler Ebel <tebel@tylerebel.com>"]
version = "0.1.1"
edition = "2021"
rust-version = "1.77.2"
description = "cts-rs is a CLI tool designed to interface with AWS Control Tower. It provides capabilities to read AWS Control Tower statuses of your dedicated payer account using the RUST AWS SDK"
license = "Apache-2.0"
documentation = "https://docs.rs/cts-rs"
repository = "https://github.com/ebel/cts-rs"
readme = "README.md"
keywords = ["aws", "controltower", "control", "tower", "cli"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "repo_pic.png",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_matches = "1.5.0"
mockall = "0.11.4"
tracing = "0.1.37"
colored = "2.0"
cfonts = "1"

aws-config = { version = "1.2.0", features = ["behavior-version-latest"] } # Use the latest version
aws-sdk-controltower = "1.21.0" # Use the latest version
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }